# trng4

./: .clang-format  AUTHORS  CMakeLists.txt  COPYING  Makefile.am  Makefile.in  NEWS  README  README.md  TODO  acinclude.m4  aclocal.m4  configure  configure.ac  configure.in
.github/workflows/: build-ubuntu-clang.yml  build-ubuntu-gcc.yml  build-windows-msvc.yml
cmake/: FindTBB.cmake
examples/: CMakeLists.txt  Ising_model.cc  Makefile.am  Makefile.in  bernoulli_dist.cc  correlated_normal_dist.cc  cpp11.cc  dieharder_file.cc  discrete_dist.cc  discrete_dist_c_style.cc  distributions.cc  hello_world.cc  implementation_test.cc  pi.cc  pi_block_cuda.cu  pi_block_hip.hip  pi_block_mpi.cc  pi_block_openmp.cc  pi_block_tbb.cc  pi_leap_cuda.cu  pi_leap_mpi.cc  pi_leap_openmp.cc  plausibility_test.cc  sample_output.cc  site_percolation_embarrassing.cc  site_percolation_fine-grained.cc  stl_container.cc  test.cc  time.cc
src/: Makefile.am  Makefile.in  bernoulli_dist.hpp  beta_dist.hpp  binomial_dist.hpp  cauchy_dist.hpp  chi_square_dist.hpp  config.hpp  config.hpp.in  constants.hpp  correlated_normal_dist.hpp  cuda.hpp  discrete_dist.hpp  exponential_dist.hpp  extreme_value_dist.hpp  fast_discrete_dist.hpp  gamma_dist.hpp  generate_canonical.hpp  geometric_dist.hpp  hypergeometric_dist.hpp  int_math.hpp  int_types.hpp  lagfib2plus.hpp  lagfib2xor.hpp  lagfib4plus.hpp  lagfib4xor.hpp  lcg64.cc  lcg64.hpp  lcg64_shift.cc  lcg64_shift.hpp  limits.hpp  logistic_dist.hpp  lognormal_dist.hpp  math.hpp  maxwell_dist.hpp  minstd.cc  minstd.hpp  mrg2.cc  mrg2.hpp  mrg3.cc  (+46 more)
tests/: CMakeLists.txt  test_all.cc  test_distributions.cc  test_engines.cc  test_int_math.cc  test_linear_algebra.cc  test_math.cc  test_special_functions.cc  test_uint128.cc  type_names.cc  type_names.hpp
trng/: CMakeLists.txt  Makefile.am  Makefile.in  bernoulli_dist.hpp  beta_dist.hpp  binomial_dist.hpp  cauchy_dist.hpp  chi_square_dist.hpp  constants.hpp  correlated_normal_dist.hpp  count128_lcg_shift.cc  count128_lcg_shift.hpp  cuda.hpp  discrete_dist.hpp  exponential_dist.hpp  extreme_value_dist.hpp  fast_discrete_dist.hpp  gamma_dist.hpp  generate_canonical.hpp  geometric_dist.hpp  hypergeometric_dist.hpp  int_math.hpp  int_types.hpp  lagfib2plus.hpp  lagfib2xor.hpp  lagfib4plus.hpp  lagfib4xor.hpp  lcg64.cc  lcg64.hpp  lcg64_count_shift.cc  lcg64_count_shift.hpp  lcg64_shift.cc  lcg64_shift.hpp  limits.hpp  linear_algebra.hpp  logistic_dist.hpp  lognormal_dist.hpp  math.hpp  maxwell_dist.hpp  minstd.cc  (+53 more)
